--- a/styles/style.css
+++ b/styles/style.css
@@ -151,19 +151,19 @@ footer {
 }
 
 .overlapB {
-  position: relative;
-  top: -100px;
-  left: 200px;
-  border-radius: 30px;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(45deg, #0098fa, #00c4fb) border-box;
-  border: 5px solid transparent;
-  border-radius: 50px;
-  transition: all .4s ease-in-out;
-  background-size: 200% 200%;
-  animation: gradient 1s linear infinite;
-  float: center;
+    position: relative;
+    top: -100px;
+    left: 200px;
+    border-radius: 30px;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(45deg, #0098fa, #00c4fb) border-box;
+    border-radius: 50px;
+    transition: all .4s ease-in-out;
+    background-size: 200% 200%;
+    animation: gradient 1s linear infinite;
+    float: center;
+    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
 }
 
 .overlapC {
