--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,7 @@ footer {
     transition: all .4s ease-in-out;
     animation: gradient 1s linear infinite;
     float: center;
-    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
+    -webkit-mask-image: -webkit-gradient(linear, to left, to left, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
 }
 
 .overlapB {
