fix logo going bigger to the wrong way on hover

--- a/styles/style.css
+++ b/styles/style.css
@@ -189,7 +189,7 @@ footer {
 }
 .logothing {
   transition: all .5s ease-in-out;
-  float: inline-start;
+  position: absolute;
 }
 
 .logothing:hover {
